app layput and user info
